--- a/build.gradle
+++ b/build.gradle
@@ -1,65 +1,19 @@
-//plugins {
-//    id 'java'
-//}
-//
-//group = 'org.example'
-//version = '1.0-SNAPSHOT'
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    testImplementation platform('org.junit:junit-bom:5.10.0')
-//    testImplementation 'org.junit.jupiter:junit-jupiter'
-//}
-//
-//test {
-//    useJUnitPlatform()
-//}
 plugins {
     id 'java'
-    id 'jacoco'
-    id 'org.sonarqube' version '4.0.0.2929' // Exemple de version
-    id 'maven-publish'
 }
 
-group = 'com.example'
-version = '1.0.0'
+group = 'org.example'
+version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
-    finalizedBy jacocoTestReport
-}
-
-jacocoTestReport {
-    dependsOn test
-    reports {
-        xml.required = true
-        html.required = true
-    }
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
-}
-
-sonarqube {
-    properties {
-        property "sonar.projectKey", "my-gradle-project"
-        property "sonar.host.url", "http://localhost:9000"
-        property "sonar.login", "your-sonar-token"
-    }
 }
