--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,107 @@
+//plugins {
+//    id 'java'
+//    id 'jacoco'
+//}
+//
+//group = 'org.example'
+//version = '1.0-SNAPSHOT'
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    testImplementation 'io.cucumber:cucumber-java:6.0.0'
+//    testImplementation 'io.cucumber:cucumber-junit:6.0.0'
+//    testImplementation 'junit:junit:4.12'
+//
+//}
 plugins {
     id 'java'
+    id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.25"
+    id 'maven-publish'
+    id("org.sonarqube") version "4.4.0.3356"
+    id "jacoco"
+    id("de.zebrajaeger.sendMail") version "0.2.2"
 }
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "myProjectKey"
+        property "sonar.host.url", "http://197.140.142.82:9000"
+        property "sonar.login", "d0578c8888ba6317fb83785311e5850a1a620054"
+        property "sonar.sources", "src/main/java"
+        property "sonar.skipCompile" , 'true'
+        property "sonar.tests", "src/test/java"
+        property "sonar.java.binaries", "build/classes/java"
+        property "sonar.skipCompile" ,"true"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+    }
+}
+
+cucumberReports {
+    outputDir = file('build/reports/cucumber/')
+    buildId = '0'
+    reports = files('reports/example-report.json')
+}
+
 repositories {
+    gradlePluginPortal()  // Ensures Gradle looks in the Plugin Portal
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'io.cucumber:cucumber-java:6.0.0'
+    testImplementation 'io.cucumber:cucumber-junit:6.0.0'
+    testImplementation 'junit:junit:4.12'
+}
+
+sendMail {
+    smtpServer {
+        host "smtp.gmail.com"
+        port 587
+        user "ko_benkhaoua@esi.dz"
+        password "poma ohwx wtuc ckgq"
+        tls true
+    }
+    mail {
+        from "ko_benkhaoua@esi.dz"
+        to "ko_benkhaoua@esi.dz"
+        subject = "Test oussama jinkins"
+        body = "This is a test email sent from Oussama."
+    }
+}
+
+publishing {
+    repositories {
+        maven {
+            url 'https://mymavenrepo.com/repo/cEmjfkxugPlzLxXg1A2B/'
+            credentials {
+                username 'myMavenRepo'
+                password 'test0005'
+            }
+        }
+    }
+
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
 }
 
 test {
-    useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+    reports {
+        xml.required = true // Generate XML report for SonarQube
+        html.required = true
+    }
 }
